@@ -6,7 +6,6 @@ import de.brightslearning.boersebackend.model.UserRolle;
 import de.brightslearning.boersebackend.repository.BenutzerRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -15,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SecurityService implements UserDetailsService {
@@ -34,16 +32,16 @@ public class SecurityService implements UserDetailsService {
         );
 
         return new User(
-              benutzer.getBenutzername(),
-              benutzer.getPasswort(),
-              mapBenutzerRollenToAuthorities(benutzer.getUserRollen())
+                benutzer.getBenutzername(),
+                benutzer.getPasswort(),
+                mapBenutzerRollenToAuthorities(benutzer.getUserRollen())
         );
     }
 
     private Collection<GrantedAuthority> mapBenutzerRollenToAuthorities (List<UserRolle> userRollen){
         return userRollen.stream()
-                .map(role -> new SimpleGrantedAuthority(role.getBezeichnung()))
-                .collect(Collectors.toList());
+                .map(role -> (GrantedAuthority) role::getBezeichnung)
+                .toList();
 
     }
 }
